fix: project responsiveness on mobile

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -182,7 +182,7 @@
 
 @media screen and (max-width:425px){
     .container{
-        padding: 1rem 1rem;
+        padding: 6rem 1rem;
     }
     .main-btn{
         margin-right: 5px;
